Changes for testing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  integration_test:
+    sdk: flutter
+  flutter_test:
+    sdk: flutter
   cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.10
@@ -35,6 +39,9 @@ dependencies:
   firebase_storage: ^10.2.9
   flutter_lints: ^1.0.0
   flutter_icons: 
+    git:
+      url: https://github.com/jibiel/flutter-icons.git
+      ref: master
   page_transition:
   audioplayers: ^0.20.1
   http:
